--- a/VecinosProyectWeb/package.json
+++ b/VecinosProyectWeb/package.json
@@ -15,11 +15,13 @@
     "@angular/common": "~11.2.5",
     "@angular/compiler": "~11.2.5",
     "@angular/core": "~11.2.5",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.5",
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
     "bootstrap": "^5.0.0",
+    "firebase": "^8.5.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
